RouteService implmented with createRoute tests passed